# document-search

./: .gitignore  .project-root  AboutProject.md  Makefile  README.md  pyproject.toml  requirements.txt  settings.yaml  setup-project.md
configs/: config.yaml
configs/hydra/hydra_logging/: none.yaml
configs/model/: default.yaml
configs/model/components/: FAISS.yaml  OpenAI.yaml  chroma.yaml
src/: main.py  searchers.py
src/examples/: extract_from_notion.py  search_and_QA.py  search_example.py  search_example_chroma.py  simpleQA.py
src/models/: Searcher.py
src/models/components/: OpenAI.py  Searchers.py
tests/models/: test_Searcher.py
tests/models/components/: test_OpenAI.py
